--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,5 @@
-# Supabase Configuration
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key
+# Neon Database Configuration
+DATABASE_URL=<your_database_url>
 
 # Server Configuration
 DEBUG=True
