--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,8 @@
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
-supabase>=2.3.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 httpx>=0.26.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.9
